<resources>
    <string name="app_name">NUMAD18S-YingChen</string>
    <string name="about">About</string>
    <string name="version_string">Version 6.1</string>
    <string name="versioncode">VersionCode 6</string>
    <string name="email">chen.ying@husky.neu.edu</string>
    <string name="year">Fall2016 CS Align Student</string>
    <string name="imei">IMEI</string>
    <string name="ying_chen">Ying Chen</string>
    <string name="todo">TODO</string>
    <string name="generate_error">Generate Error</string>
    <string name="dictionary">Dictionary</string>
    <string name="word">Enter your word here</string>
    <string name="clear">Clear</string>
    <string name="ack">Acknowledgments</string>
    <string name="acknowlegements">
        <p>
            1. The wordlist is mapped into a hashmap with the first three-letter as key, and the list of words as values.
            Code and wordlistmap are included and stored in the assets folder.
        </p>
        <p>
            Source to discuss the method from stackoverflow:
            https://stackoverflow.com/questions/29918587/how-to-find-a-word-in-large-word-list-vocabulary-with-descent-memory-consumpti
        </p>
        \n\
        <p>
            2. Sources of the sound and music:
            Dictionary beep: https://commons.wikimedia.org/wiki/File:Beep-09.ogg
            Scroggle background music: https://stereoninjamusic.weebly.com/hq-ogg-music-2015.html
        </p>
        \n\
        <p>
            3. Sources of the images:
            background.jpg: https://www.pinterest.com/pin/365495325981571087
        </p>
        \n\
        <p>
            4. Reference sources:
            Hello, Android, 4th Edition: https://kupdf.net/download/hello-android-4th-edition_58cfeaa5dc0d608f39c346b4_pdf
            Android Studio User Guide: https://developer.android.com/studio/intro/
        </p>

    </string>
    <string name="wordgame">Word Game</string>
    <string name="scroggle_app_name">SCROGGLE</string>
    <string name="scroggle_ack">Acknowledgements</string>
    <string name="instructions">Instructions</string>
    <string name="newgame">New Game</string>
    <string name="ok">OK</string>
    <string name="ins">
        <b>Scroggle</b>
        \n\
        This is a very interesting word game mainly based on old Boggle word game where you form words
        from the given letter in the grids of one 3X3 large grid and 9 3X3 smaller grids.
        \n\
        <b>Duration and Phases:</b>
        Total of 3 minutes with two phases.
        Each phase runs for 1.5 minutes.
        At the end of each phase, the game will automatically take you to the next phase.
        \n\
        <b>Operations:</b>
        One short click on one letter if you want to pick that letter, and long click on one letter if you
        are finishing the word form in that grid.
        You can register to the game and then you can record your games and scores in My Scoreboard and if your
        score is the top ten in all the users, your username can show in the Leaderboard.
        \n\
        <b>Rules:</b>
        1. In the first phase, play boggle on each of the small grids,i.e., form a word for each smaller grid
        consisting of 3 to 9 letters.
        \n\
        2. You will have 9 words with those letters for your second phase. In the second phase,
        by picking one letter from each quadrant, you can form words again.
        \n\
        3. You can revisit the grids but not select two letters in the same quadrant one after another.
        \n\
        <b>Scoring rules:</b>
        Different points for different letters:
        \n\
        1. 1 point each for E, A, I, O, N, R, T, L, S, U
        \n\
        2. 2 points each for D, G
        \n\
        3. 3 points each for B, C, M, P
        \n\
        4. 4 points each for F, H, V, W, Y
        \n\
        5. 5 points for K
        \n\
        6. 8 points each for J, X
        \n\
        7. 10 points each for Q, Z
        \n\
        The length of the words formed will also affect the points:
        \n\
        word length: 3 - 5, points: the length of the word
        \n\
        word length: 6, points: 10
        \n\
        word length: 7, points: 15
        \n\
        word length: 8, points: 20
        \n\
        word length: 9, points: 25
        \n\
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="mute">Mute</string>
    <string name="unmute">UnMute</string>
    <string name="time">Time:</string>
    <string name="score">Score:</string>
    <string name="register">Register To The Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="scoreboard">My Scoreboard</string>
    <string name="username_hint">Please enter your username</string>
    <string name="date">Play Time</string>
    <string name="order">Order</string>
    <string name="highest">Highest!</string>
    <string name="username">User</string>
    <string name="congrats">Congrats!</string>
    <string name="submit">Submit</string>
    <string name="points">points</string>
</resources>
