<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".WordGameFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_space"
        android:text="@string/scroggle_app_name"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/menu_text_size"/>

    <Button
        android:id="@+id/newgame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/newgame"
        android:textColor="@color/colorWhite"
        android:background="@color/gray_color"/>

    <Button
        android:id="@+id/instruction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/instructions"
        android:textColor="@color/colorWhite"
        android:background="@color/gray_color"/>

    <Button
        android:id="@+id/ack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/scroggle_ack"
        android:textColor="@color/colorWhite"
        android:background="@color/gray_color"/>

</LinearLayout>