<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TableRow android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/date"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                android:textColor="@color/colorWhite"/>
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/score"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/order"
                android:text="@string/highest"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username2"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/score2"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username3"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/score3"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username4"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/score4"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username5"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/score5"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username6"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/score6"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username7"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/score7"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username8"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/score8"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username9"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/score9"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username10"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/score10"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    </TableLayout>

</ScrollView>